finished last set of functionalities
