# api/db.js
@@ -1,6 +1,6 @@
 var pg 		= require('pg'),
 	connStr = 'postgres://uviluovygcqyek:iGc05LuhQZFOUApKsImha0VxfM@ec2-107-21-222-62.compute-1.amazonaws.com:5432/dejrltg6brj8el',
-	//connStr = 'postgres://postgres:asd@127.0.0.1:5434/plur_nova',
+	//connStr = '',
 	md5		= require('md5');
 
 db={
@@ -65,13 +65,25 @@ db={
 	checkEmail:function(email, cb){
         var client = new pg.Client(connStr);
         client.connect();
-        res=client.query('select user_id from users2 where email=\''+email+'\' and active=1',function(err, result){
+        res=client.query('select user_id from users2 where email=$1 and active=1', [email], function(err, result){
 			client.end();
-            if(result.rows.length>0){ 
+            if(result.rows.length>0){
                 return cb(false)
             }
             else{
-                //client.query('insert into neuspjesni_login (lastcheck, ip) values(now()::TIMESTAMP WITHOUT TIME ZONE,$1)',[a]);
+                return cb(true)
+            }
+        });
+    },
+    checkUsername:function(username, cb){
+        var client = new pg.Client(connStr);
+        client.connect();
+        res=client.query('select user_id from users2 where username=$1 and active=1', [username], function(err, result){
+			client.end();
+            if(result.rows.length>0){
+                return cb(false)
+            }
+            else{
                 return cb(true)
             }
         });
@@ -92,13 +104,13 @@ db={
 	createMovie: function(data, cb){
 		var client = new pg.Client(connStr);
 		client.connect()
-		client.query('insert into movies (name, description, actors, user_id) values ($1, $2, $3, $4)',[data.name, data.desc, data.actors, data.user_id],function(e,r){
-			client.end();
+		client.query('insert into movies (name, description, user_id) values ($1, $2, $3)',[data.name, data.desc, data.user_id],function(e,r){
 			if(e){
 				return cb(e)
 			}
 			else{
-				id=client.query('SELECT currval(\'movies_id_seq\')',function(e2,r2){
+				client.query('SELECT currval(\'movies_id_seq\')',function(e2,r2){
+					client.end()
 					if(e2){
 
 					}
@@ -107,7 +119,38 @@ db={
 			}
 		});
 	},
-	logIn:function(req, creds, callback){
+
+	editMovie:function(req, cb){
+	var client = new pg.Client(connStr),
+		movId = req.swagger.params.movId.value,
+      	props = req.swagger.params.props.value;
+    client.connect();
+    client.query('select * from movies where id=$1 and user_id=$2', [movId, req.user_id], function(e, r){
+    	if(e){
+    		client.end()
+    		return cb(false, e)
+    	}
+    	else if(r.rows.length>0){
+    		client.query('update movies set name=$1, description=$2 where id=$3',[props.props.name, props.props.description, movId], function(err, res){
+    			client.end()
+    			if(e){
+    				return cb(false, e)
+    			}
+    			else{
+    				cb(true, 'Movie updated')
+    			}
+    		})
+    	}
+    	else{
+    		client.end()
+    		return cb(false, 'Not an owner');
+    	}
+    })
+
+      	
+	},
+
+	logIn:function(req, creds, cb){
         var client = new pg.Client(connStr);
         client.connect();
         res=client.query('select username, user_id, email from users2 where username=$1 and password=$2 and active=1 limit 1',[creds.username, md5(creds.password)],function(err, result){
@@ -116,14 +159,13 @@ db={
         		var date = new Date()
         		data.token = md5(''+data.user_id+date);
         		res2 = client.query('insert into tokens (token, user_id, logged_out) values($1, $2, 0)', [data.token, data.user_id], function(err, res){
-				client.end();
+					client.end();
         			if(err){
-        				console.log(err)
+        				return cb(false, err)
         			}
         			else{
-						callback(true, data)
+						return cb(true, data)
         			}
-					client.done();
         		})
             }
             else{
